--- a/_data/organisers.yml
+++ b/_data/organisers.yml
@@ -1,11 +1,11 @@
 Lucas Gatsas:
-    name: Lucas Gatsas
+    name: TeleSwipe
     email: "lucasgatsas@gmail.com"
     photo: "http://spaceg.github.io/assets/img/l-g.png"
     country: Switzerland 
     web: spaceg.github.io
-    descsidebartitle: Hello, My Name is Lucas Gatsas.
-    descsidebartext: I will write here about Technology and Web & Mobile Development.
+    descsidebartitle: Hello World, This is the TeleSwipe Developer Blog.
+    descsidebartext: We write here about Technology and Web & Mobile Development.
     sidebarnewsletter: Please, feel free to  Stay Up to Date with the Source and Blog.
     descsidebartext2: If you have any Question about everything, please feel free to contact me. 
     sidebaremail: "lucasgatsas@gmail.com"
